<resources>
    <string name="licence_agreement_url">https://gettransfer.com/en/terms_of_use</string>
    <string name="api_key_demo">7dfea5095801332db75975c882361bbf</string>
    <string name="api_url_demo">https://stgtr.org</string>
    <string name="api_key_prod">3fe0f9208622274f1a21e78037eea83e</string>
    <string name="api_url_prod">https://gettransfer.com</string>
    <string name="logs_file_name">Logs.txt</string>
    <string name="file_provider_authority" translatable="false">com.kg.gettransfer.fileprovider</string>
    <string name="share_extra_subject">GTR Logs</string>
    <string name="title_starting_session">/////////////////////////////////////////////////////\n//////////////////// NEW SESSION ////////////////////\n/////////////////////////////////////////////////////</string>
    <string name="err_address_service_xxx">Ошибка определения адреса!</string>
    <string name="err_server">Ошибка: %1$s</string>
    <string name="err_server_code">Ошибка сервера %1$s! %2$s</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="search_start">Loading…</string>
    <string name="search_nothing"></string>
    <string name="searchTransitionName">SEARCH_FORM</string>
    <string name="transfer_start_sign">A</string>
    <string name="transfer_end_sign">B</string>
    <string name="rub">₽</string>
    <string name="count_persons_and_baggage"> X %1$d</string>
    <string name="activity_transfer_details_paid_sum">%1$s (%2$s\%%)</string>
    <string name="share">Share</string>
    <string name="endpoint">Endpoint</string>
    <string name="logs">Logs</string>
    <string name="search">Search</string>
    <string name="reset_onboarding">Reset onboarding</string>
    <string name="nav_footer_version">Version %1$s\nBuild %2$s</string>
    <string name="activity_carrier_transfer_details_title">Trip details</string>
    <string name="passenger_number_default">0</string>
    <string name="child_number_default">0</string>
    <string name="log_in_to_see_transfers_and_offers">Log in to see transfers and offers</string>
    <string name="log_in_requirement_error_title">You are not logged in</string>
    <string name="LNG_MISKO">TEST</string>
    <string name="LNG_OK">OK</string>
    <string name="LNG_CANCEL">Cancel</string>
    <string name="LNG_CLOSE"><u>Close</u></string>
    <string name="LNG_CHOOSE">Select</string>
    <string name="LNG_BOOK">Book</string>
    <string name="LNG_CLEAR">Clear</string>
    <string name="LNG_DONE"><u>Done</u></string>
    <string name="LNG_OPEN">Open</string>
    <string name="LNG_COPY">Copy</string>
    <string name="LNG_NEXT">Next</string>
    <string name="LNG_ERROR">Error</string>
    <string name="LNG_SUCCESS">Success</string>
    <string name="LNG_ACCOUNT">Account</string>
    <string name="LNG_NOT_FOUND">not found</string>
    <string name="LNG_ERROR_EMAIL">Invalid email</string>
    <string name="LNG_UNEXPECTED_ERROR">Unexpected error</string>
    <string name="LNG_BAD_CREDENTIALS_ERROR">Login failed</string>
    <string name="LNG_NO_ACCOUNT_ERROR">Account didn\'t created</string>
    <string name="LNG_UNAUTHORIZED_ERROR">Not logged in</string>
    <string name="LNG_NETWORK_ERROR">Check your Internet connection</string>
    <string name="LNG_UNPROCESSABLE_ERROR">Unprocessable</string>
    <string name="LNG_PHONE_TAKEN_ERROR">Phone number already taken</string>
    <string name="LNG_DATE_EARLY_ERROR">Date is too early</string>
    <string name="LNG_KM">km</string>
    <string name="LNG_M">m</string>
    <string name="LNG_MI">miles</string>
    <string name="LNG_D">d</string>
    <string name="LNG_H">h</string>
    <string name="LNG_MIN">min</string>
    <string name="LNG_HOUR">hour</string>
    <string name="LNG_DAYS">days</string>
    <string name="LNG_HOURS">hours</string>
    <string name="LNG_HOUR_FEW">hours</string>
    <string name="LNG_DAY">day</string>
    <string name="LNG_DAYS_FEW">days</string>
    <string name="LNG_FIELD_DURATION_TRIP">Duration of the trip</string>
    <string name="LNG_FIELD_PER_HOUSE">Select the duration of the trip</string>
    <string name="LNG_PER_HOUR">Per hour</string>
    <string name="LNG_USD">US Dollar</string>
    <string name="LNG_EUR">Euro</string>
    <string name="LNG_GBP">Pound Sterling</string>
    <string name="LNG_RUB">Russian Ruble</string>
    <string name="LNG_THB">Baht</string>
    <string name="LNG_JPY">Yen</string>
    <string name="LNG_CNY">Renminbi</string>
    <string name="LNG_MENU_TITLE_LOGIN">Log in</string>
    <string name="LNG_MENU_SUBTITLE_LOGIN">Passenger log in and sign up</string>
    <string name="LNG_MENU_TITLE_RIDES">Requests</string>
    <string name="LNG_MENU_SUBTITLE_RIDES">Active and archived rides</string>
    <string name="LNG_MENU_TITLE_LAST_RIDES">Archived rides</string>
    <string name="LNG_MENU_SUBTITLE_LAST_RIDES">Last rides</string>
    <string name="LNG_MENU_TITLE_PAYMENTS">Payments</string>
    <string name="LNG_MENU_SUBTITLE_PAYMENTS">Add/change payment methods</string>
    <string name="LNG_MENU_TITLE_PROMO">Promo code</string>
    <string name="LNG_MENU_SUBTITLE_PROMO">Get the sale</string>
    <string name="LNG_MENU_TITLE_COUNT">Business account</string>
    <string name="LNG_MENU_SUBTITLE_COUNT">Your company pay for your transfer</string>
    <string name="LNG_MENU_TITLE_SETTINGS">Settings</string>
    <string name="LNG_MENU_SUBTITLE_SETTINGS">Language and payment settings</string>
    <string name="LNG_MENU_TITLE_SUPPORT">Support</string>
    <string name="LNG_MENU_SUBTITLE_SUPPORT">Get the help</string>
    <string name="LNG_MENU_TITLE_ABOUT">About us</string>
    <string name="LNG_MENU_SUBTITLE_ABOUT">Our features</string>
    <string name="LNG_MENU_TITLE_DRIVE">Driver mode</string>
    <string name="LNG_MENU_SUBTITLE_DRIVE">Switch to driver mode</string>
    <string name="LNG_MENU_TITLE_PASSENGER">Passenger mode</string>
    <string name="LNG_MENU_SUBTITLE_PASSENGER">Passenger mode</string>
    <string name="LNG_MENU_TITLE_TRIPS">Upcoming transfers</string>
    <string name="LNG_MENU_SUBTITLE_TRIPS">Upcoming transfers</string>
    <string name="LNG_READMORE"><u>Read more</u></string>
    <string name="LNG_BESTPRICES">Best prices for transfers\nbetween airports and cities\nworldwide</string>
    <string name="LNG_LANGUAGE">Application language</string>
    <string name="LNG_CURRENCY">Currency</string>
    <string name="LNG_SYSTEM_LANGUAGE">System language</string>
    <string name="LNG_DISTANCE_UNIT">Distance unit</string>
    <string name="LNG_DISTANCE_UNIT_KM">Kilometers</string>
    <string name="LNG_DISTANCE_UNIT_MI">Miles</string>
    <string name="LNG_UNLOGIN">Sign out</string>
    <string name="LNG_LOGIN_EMAIL_SECTION">E-mail or phone number</string>
    <string name="LNG_LOGIN_PASSWORD_SECTION">Password</string>
    <string name="LNG_LOGIN_BUTTON">Login</string>
    <string name="LNG_LOGIN_EMAIL">Enter email</string>
    <string name="LNG_LOGIN_PASSWORD">Enter password</string>
    <string name="LNG_LOGIN_REQUIRED">Please login to continue</string>
    <string name="LNG_LOGIN_FORGOT_PASSWORD">Forgot your password?</string>
    <string name="LNG_LOGIN_RECOVERY_PASSWORD">Password recovery</string>
    <string name="LNG_LOGIN_RECOVERY_PASSWORD_CHECK_INBOX">Check your inbox</string>
    <string name="LNG_LOGIN_RECOVERY_PASSWORD_SUCCESFUL_MESSAGE">A link to change your password has been sent to your email</string>
    <string name="LNG_OPEN_LOGIN">Open login window?</string>
    <string name="LNG_ABOUNT_TITLE_0">Best price</string>
    <string name="LNG_ABOUNT_TITLE_1">Best service</string>
    <string name="LNG_ABOUNT_TITLE_2">Safe transfers</string>
    <string name="LNG_ABOUNT_DESC_0">Choose a transfer price\nfrom a wide selection of offers.</string>
    <string name="LNG_ABOUNT_DESC_1">We have a wide\nselection of vehicle types.\nTaxes and tips are included\nin the original fee.\nWe allow a free waiting time\nof 45 minutes.</string>
    <string name="LNG_ABOUNT_DESC_2">You always know your carrier.\nAll carriers are carefully selected.</string>
    <string name="LNG_PRESENTATION_TITLE_0">Best price guarantee</string>
    <string name="LNG_PRESENTATION_TITLE_1">No hidden costs</string>
    <string name="LNG_PRESENTATION_TITLE_2">Free waiting time</string>
    <string name="LNG_PRESENTATION_TITLE_3">Safe transfers</string>
    <string name="LNG_PRESENTATION_DESC_0">We return the difference in price</string>
    <string name="LNG_PRESENTATION_DESC_1">Taxes, tolls and gratuity included</string>
    <string name="LNG_PRESENTATION_DESC_2">We allow free waiting time of 60 minutes at airports, all other locations include a free 15 minutes waiting time.</string>
    <string name="LNG_PRESENTATION_DESC_3">You always know your carrier.\nAll carriers are carefully selected.</string>
    <string name="LNG_PRESENTATION_FINAL_BUTTON">START</string>
    <string name="LNG_SEARCH_POPULAR_PLACES">Popular places</string>
    <string name="LNG_SEARCH_RECENT_PLACES">Recent Places</string>
    <string name="LNG_SEARCH_POPULAR_AIRPORT">Airport</string>
    <string name="LNG_SEARCH_POPULAR_STATION">Station</string>
    <string name="LNG_SEARCH_POPULAR_HOTEL">Hotel</string>
    <string name="LNG_FIELD_SOURCE">From: airport, train station, city, hotel, other place</string>
    <string name="LNG_FIELD_SOURCE_PICKUP">Pickup location</string>
    <string name="LNG_FIELD_SOURCE_WHERE">Where from?</string>
    <string name="LNG_FIELD_SOURCE_ENTRANCE">Entrance</string>
    <string name="LNG_FIELD_SOURCE_ENTRANCE_GATE_NUMBER">Entrance or gate number</string>
    <string name="LNG_FIELD_DESTINATION">To: airport, train station, city, hotel, other place</string>
    <string name="LNG_FIELD_DESTINATION_WHERE">Where to?</string>
    <string name="LNG_FIELD_DESTINATION_SELECT_POINT_MAP">Select a point on the map</string>
    <string name="LNG_FIELD_ERROR_MATCH_ADDRESSES">Too close, choose another location</string>
    <string name="LNG_SHARE_TEXT">Check this app! %s</string>
    <string name="LNG_OFFLINE_MESSAGE">No Internet connection.\nTransfers information available in the menu.</string>
    <string name="LNG_OFFLINE_MESSAGE_CACHE">No Internet connection.\nShown last available data.</string>
    <string name="LNG_BESTPRICE_TITLE">We return the difference in price</string>
    <string name="LNG_BESTPRICE_TEXT1">You can claim a refund of the difference in price, if you find a similar offer on another site at a lower price.</string>
    <string name="LNG_BESTPRICE_TEXT2">Just remember to contact us after booking with us and at least 48 hours before your check-in date. You\'ll need to provide us with the link to the other offer and it must be online and available when we check.</string>
    <string name="LNG_BESTPRICE_YELLOW_TITLE">We will refund you the difference provided that the other offer:</string>
    <string name="LNG_BESTPRICE_YELLOW_TEXT1"> • identical to our transfer</string>
    <string name="LNG_BESTPRICE_YELLOW_TEXT2"> • designated on the relevant dates</string>
    <string name="LNG_BESTPRICE_YELLOW_TEXT3"> • does not participate in the action</string>
    <string name="LNG_BESTPRICE_YELLOW_TEXT4">   from the carrier and does not have a discount</string>
    <string name="LNG_BESTPRICE_YELLOW_TEXT5"> • is provided by a legal entity</string>
    <string name="LNG_RIDE_FIND_TRIPS">Find requests</string>
    <string name="LNG_RIDE_SETTINGS_OPTIONAL_COMMENT">comment</string>
    <string name="LNG_RIDE_NAME">Your name</string>
    <string name="LNG_BOOKING_NUMBER">Booking number</string>
    <string name="LNG_CUSTOMER_SUPPORT">Customer support</string>
    <string name="LNG_RIDE_ABOUT_REQUEST">About request</string>
    <string name="LNG_DRIVER_PHONE">Phone</string>
    <string name="LNG_DRIVER_EMAIL">Email</string>
    <string name="LNG_RIDE_FLIGHT_NUMBER">Flight number</string>
</resources>