<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/read_more_padding_horizontal"
    android:paddingEnd="@dimen/read_more_padding_horizontal">

    <TextView
        android:id="@+id/tv_read_more_title"
        style="@style/black_semiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/read_more_content_margin"
        android:gravity="center_horizontal"
        android:paddingStart="@dimen/read_more_content_margin"
        android:paddingEnd="@dimen/read_more_content_margin"
        android:text="@string/LNG_BESTPRICE_TITLE"
        android:textSize="@dimen/read_more_title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="We return difference of a price" />

    <TextView
        android:id="@+id/content1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/read_more_content_margin"
        android:text="@string/LNG_BESTPRICE_TEXT1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/read_more_tiny_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_read_more_title" />

    <TextView
        android:id="@+id/content2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/read_more_content_margin"
        android:text="@string/LNG_BESTPRICE_TEXT2"
        android:textColor="@android:color/black"
        android:textSize="@dimen/read_more_tiny_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content1" />

    <LinearLayout
        android:id="@+id/content3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/read_more_content_margin"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="@dimen/read_more_content3_padding_horizontal"
        android:paddingTop="@dimen/read_more_content3_padding_vertical"
        android:paddingEnd="@dimen/read_more_content3_padding_horizontal"
        android:paddingBottom="@dimen/read_more_content3_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content2">

        <TextView
            style="@style/read_more_title"
            android:layout_marginBottom="@dimen/read_more_content3_padding_vertical"
            android:text="@string/LNG_BESTPRICE_YELLOW_TITLE" />

        <TextView
            style="@style/read_more_item"
            android:text="@string/LNG_BESTPRICE_YELLOW_TEXT1"
            android:textSize="@dimen/read_more_tiny_text_size" />

        <TextView
            style="@style/read_more_item"
            android:text="@string/LNG_BESTPRICE_YELLOW_TEXT2"
            android:textSize="@dimen/read_more_tiny_text_size" />

        <TextView
            style="@style/read_more_item"
            android:text="@string/LNG_BESTPRICE_YELLOW_TEXT3"
            android:textSize="@dimen/read_more_tiny_text_size" />

        <TextView
            style="@style/read_more_item"
            android:text="@string/LNG_BESTPRICE_YELLOW_TEXT4"
            android:textSize="@dimen/read_more_tiny_text_size" />

        <TextView
            style="@style/read_more_item"
            android:text="@string/LNG_BESTPRICE_YELLOW_TEXT5"
            android:textSize="@dimen/read_more_tiny_text_size" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/LNG_CLOSE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content3" />

</androidx.constraintlayout.widget.ConstraintLayout>
