<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|top"
        android:gravity="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/navViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/navHeaderLogo"
                android:layout_width="@dimen/nav_header_logo_width"
                android:layout_height="@dimen/nav_header_logo_height"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/nav_header_logo_start"
                android:contentDescription="Header logo"
                app:srcCompat="@drawable/logo" />

            <ImageView
                android:id="@+id/navHeaderShare"
                android:layout_width="@dimen/nav_header_share_size"
                android:layout_height="@dimen/nav_header_share_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/navHeaderLogo"
                android:layout_marginEnd="@dimen/nav_header_share_end"
                android:layout_marginBottom="@dimen/nav_header_share_bottom"
                android:contentDescription="Share"
                android:focusable="false"
                android:tint="@android:color/black"
                app:srcCompat="@drawable/ic_menu_share" />

            <RelativeLayout
                android:id="@+id/layoutAccountInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/navHeaderLogo"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/nav_header_account_info_layout_margin_top">

                <TextView
                    android:id="@+id/navHeaderMode"
                    style="@style/nav_item_subtitle"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/nav_header_logo_start"
                    android:textSize="@dimen/nav_header_mode_text_size"
                    android:visibility="gone"
                    tools:text="@string/LNG_MENU_TITLE_DRIVE"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/navHeaderName"
                    style="@style/nav_item_title"
                    android:textColor="@color/colorWhite"
                    android:layout_marginStart="@dimen/nav_header_logo_start"
                    android:visibility="visible"
                    android:layout_below="@+id/navHeaderMode"
                    tools:text="Maluta Skuratov"/>

                <TextView
                    android:id="@+id/navHeaderEmail"
                    style="@style/nav_item_subtitle"
                    android:textColor="@color/colorWhite"
                    android:layout_below="@+id/navHeaderName"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="@dimen/nav_header_logo_start"
                    android:visibility="visible"
                    tools:text="android.studio@android.com"/>

            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/navViewItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/navViewHeader"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navNewTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_new"
                app:menu_title_text="@string/LNG_MENU_TITLE_NEW"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_NEW"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_person"
                app:menu_title_text="@string/LNG_MENU_TITLE_LOGIN"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_LOGIN"
                android:visibility="visible"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navCarrierTransfers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_route"
                app:menu_title_text="@string/LNG_MENU_TITLE_TRANSFERS"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_TRANSFERS"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navRequests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_route"
                app:menu_title_text="@string/LNG_MENU_TITLE_RIDES"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_RIDES" />

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navCarrierTrips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/nav_driver_trips"
                app:menu_title_text="@string/LNG_MENU_TITLE_TRIPS"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_TRIPS"
                android:visibility="gone"
                tools:visibility="visible"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_settings"
                app:menu_title_text="@string/LNG_MENU_TITLE_SETTINGS"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_SETTINGS"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_support"
                app:menu_title_text="@string/LNG_CUSTOMER_SUPPORT"
                app:menu_subtitle_text="@string/LNG_CUSTOMER_SUBTITLE_SUPPORT"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_info"
                app:menu_title_text="@string/LNG_MENU_TITLE_ABOUT"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_ABOUT"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navBecomeACarrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_switch_off"
                app:menu_title_text="@string/LNG_MENU_TITLE_DRIVE"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_DRIVE"
                android:visibility="visible"/>

            <com.kg.gettransfer.presentation.ui.custom.NavigationViewMenuItem
                android:id="@+id/navPassengerMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu_icon_img="@drawable/ic_menu_switch_on"
                app:menu_title_text="@string/LNG_MENU_TITLE_PASSENGER"
                app:menu_subtitle_text="@string/LNG_MENU_SUBTITLE_PASSENGER"
                android:visibility="gone"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/navViewFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/navViewItems">

            <ImageButton
                android:id="@+id/navFooterStamp"
                android:layout_width="@dimen/best_price_logo_image_size"
                android:layout_height="@dimen/best_price_logo_image_size"
                android:background="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/navFooter"
                app:layout_constraintVertical_bias="1"
                android:layout_marginStart="@dimen/best_price_logo_margin_start"
                android:layout_marginBottom="@dimen/best_price_logo_margin_bottom"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/ic_best_price_logo"/>

            <TextView
                android:id="@+id/navMessage"
                style="@style/sf_font_semi_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/navFooterStamp"
                app:layout_constraintBottom_toBottomOf="@+id/navFooterStamp"
                app:layout_constraintStart_toEndOf="@+id/navFooterStamp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/nav_footer_title_horizontal_margin"
                android:layout_marginEnd="@dimen/nav_footer_title_horizontal_margin"
                android:layout_above="@+id/navFooter"
                android:textSize="@dimen/nav_footer_title_text_size"
                android:gravity="start"
                android:text="@string/LNG_BESTPRICES" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/navFooter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/nav_footer_version_start"
                android:paddingEnd="@dimen/nav_footer_version_start"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/nav_footer_version_bottom">

                <TextView
                    android:id="@+id/navFooterReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/LNG_READMORE" />

                <TextView
                    android:id="@+id/navFooterVersion"
                    style="@style/nav_footer_version"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="version" />

            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </RelativeLayout>
</android.support.design.widget.NavigationView>