<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back_top_rounded"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/searchTransitionName">

    <TextView
        android:id="@+id/tv_point"
        android:layout_width="@dimen/a_b_point_iconSize"
        android:layout_height="@dimen/a_b_point_iconSize"
        app:layout_constraintTop_toTopOf="@+id/searchField"
        app:layout_constraintBottom_toBottomOf="@+id/searchField"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:background="@drawable/back_circle_marker_filled_orange"
        android:textColor="@color/colorTextBlack"
        tools:text="A"/>

    <com.kg.gettransfer.presentation.ui.SearchAddressReadOnly
        android:id="@+id/searchField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:hint="@string/LNG_FIELD_SOURCE"
        app:layout_constraintStart_toEndOf="@+id/tv_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="16dp"
        app:title="@string/LNG_FIELD_SOURCE_PICKUP" />

</androidx.constraintlayout.widget.ConstraintLayout>
